// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Karura Accounts > \`burn\` > burning funds below ED leads to account reaping > events for burn 1`] = `
[
  {
    "data": {
      "amount": "(rounded 100000000000000)",
      "who": "orcV2NVV5KdwWmVDG2uaDZFZkUSeKLTXFRkbtABhCLhY69q",
    },
    "method": "Burned",
    "section": "balances",
  },
]
`;

exports[`Karura Accounts > \`burn\` > burning funds from account works > events when Alice self-burns funds 1`] = `
[
  {
    "data": {
      "amount": 50000000000000,
      "who": "orcV2NVV5KdwWmVDG2uaDZFZkUSeKLTXFRkbtABhCLhY69q",
    },
    "method": "Burned",
    "section": "balances",
  },
]
`;

exports[`Karura Accounts > \`force_adjust_total_issuance\` > successful adjustments increase and decrease total issuance > events for first issuance change 1`] = `
[
  {
    "data": {
      "new_": "(number)",
      "old": "(number)",
    },
    "method": "TotalIssuanceForced",
    "section": "balances",
  },
]
`;

exports[`Karura Accounts > \`force_adjust_total_issuance\` > successful adjustments increase and decrease total issuance > events for second issuance change 1`] = `
[
  {
    "data": {
      "new_": "(number)",
      "old": "(number)",
    },
    "method": "TotalIssuanceForced",
    "section": "balances",
  },
]
`;

exports[`Karura Accounts > \`force_transfer\` > force transferring origin below ED can kill it > events of \`force_transfer\` from Alice to Bob 1`] = `
[
  {
    "data": {
      "account": "orcV2NVV5KdwWmVDG2uaDZFZkUSeKLTXFRkbtABhCLhY69q",
    },
    "method": "KilledAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "orcV2NVV5KdwWmVDG2uaDZFZkUSeKLTXFRkbtABhCLhY69q",
      "amount": "(number)",
    },
    "method": "DustLost",
    "section": "balances",
  },
  {
    "data": {
      "account": "qesz1XedySNjJv5Jvpd8oXXhXtWrkgEFp1hfpJAtt3xWDQN",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "qesz1XedySNjJv5Jvpd8oXXhXtWrkgEFp1hfpJAtt3xWDQN",
      "freeBalance": "(number)",
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Karura Accounts > \`transfer_all\` > account with reserves cannot transfer all funds > events when Alice with reserve transfers all to Bob 1`] = `
[
  {
    "data": {
      "account": "qesz1XedySNjJv5Jvpd8oXXhXtWrkgEFp1hfpJAtt3xWDQN",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "qesz1XedySNjJv5Jvpd8oXXhXtWrkgEFp1hfpJAtt3xWDQN",
      "freeBalance": "(number)",
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Karura Accounts > \`transfer_all\` > transfer all with keepAlive false kills sender > events when Alice transfers all to Bob with \`keepAlive = false\` 1`] = `
[
  {
    "data": {
      "account": "orcV2NVV5KdwWmVDG2uaDZFZkUSeKLTXFRkbtABhCLhY69q",
    },
    "method": "KilledAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "qesz1XedySNjJv5Jvpd8oXXhXtWrkgEFp1hfpJAtt3xWDQN",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "qesz1XedySNjJv5Jvpd8oXXhXtWrkgEFp1hfpJAtt3xWDQN",
      "freeBalance": "(rounded 10000000000000)",
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Karura Accounts > \`transfer_all\` > transfer all with keepAlive true leaves 1 ED > events when Alice transfers all to Bob with \`keepAlive = true\` 1`] = `
[
  {
    "data": {
      "account": "qesz1XedySNjJv5Jvpd8oXXhXtWrkgEFp1hfpJAtt3xWDQN",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "qesz1XedySNjJv5Jvpd8oXXhXtWrkgEFp1hfpJAtt3xWDQN",
      "freeBalance": "(rounded 9900000000000)",
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Karura Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and manual lock, triggered via multisig creation 1`] = `"RPC payment validation rejected transaction due to insufficient funds"`;

exports[`Karura Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and manual lock, triggered via proxy addition 1`] = `"RPC payment validation rejected transaction due to insufficient funds"`;

exports[`Karura Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and manual lock, triggered via referendum submission > liquidity restriction test skipped 1`] = `"Skipping test - required pallets not available: deposit=referendum submission"`;

exports[`Karura Accounts > transfer_allow_death > account with reserves is not reaped when transferring funds > events when Alice with reserve transfers to Bob 1`] = `[]`;

exports[`Karura Accounts > transfer_allow_death > leaving an account below ED kills it > events when Alice \`transfer_allow_death\` to Bob 1`] = `
[
  {
    "data": {
      "account": "orcV2NVV5KdwWmVDG2uaDZFZkUSeKLTXFRkbtABhCLhY69q",
    },
    "method": "KilledAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "qesz1XedySNjJv5Jvpd8oXXhXtWrkgEFp1hfpJAtt3xWDQN",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "qesz1XedySNjJv5Jvpd8oXXhXtWrkgEFp1hfpJAtt3xWDQN",
      "freeBalance": "(rounded 9900000000000)",
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Karura Accounts > transfer_allow_death > leaving an account below ED kills it > unstable events when Alice \`transfer_allow_death\` to Bob 1`] = `
[
  {
    "data": {
      "amount": "(number)",
      "who": "orcV2NVV5KdwWmVDG2uaDZFZkUSeKLTXFRkbtABhCLhY69q",
    },
    "method": "Withdraw",
    "section": "balances",
  },
  {
    "data": {
      "account": "orcV2NVV5KdwWmVDG2uaDZFZkUSeKLTXFRkbtABhCLhY69q",
      "amount": "(number)",
    },
    "method": "DustLost",
    "section": "balances",
  },
]
`;

exports[`Karura Accounts > transfer_allow_death > transfer of some funds does not kill sender account > events when Alice transfers 1 ED to Bob with sufficient balance 1`] = `
[
  {
    "data": {
      "account": "qesz1XedySNjJv5Jvpd8oXXhXtWrkgEFp1hfpJAtt3xWDQN",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "qesz1XedySNjJv5Jvpd8oXXhXtWrkgEFp1hfpJAtt3xWDQN",
      "freeBalance": 100000000000,
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;
